tests/paczka1/small_fuzzy/21680300.err
Error in line 2: n9zVx49M6GF A883 26,5
Error in line 3: Fuogcnivg S52 0,7
